--- a/cloud-config-server/src/main/resources/application.yml
+++ b/cloud-config-server/src/main/resources/application.yml
@@ -2,12 +2,22 @@ server:
   port: 8888
 
 spring:
-  profiles:
-    active: native #Look for local files inside resources/config
   cloud:
     config:
       server:
-        native:
-          search-locations: classpath:/config,classpath:/app1,classpath:/app2 #In case of having same files, last location has the more priority
-        overrides:
-          name: OtherValueTOOverride #This add an extra result for override the original values
+        git:
+          uri: https://github.com/jahv/SpringCloudConfigTest-ConfigFiles #URL of the github repo
+          search-paths: #Let look for paths inside repo
+            - app*
+          force-pull: true # Always go to the repo to read the values, otherwise read from local downloaded version
+
+          repos:
+            jndi:
+              pattern:
+                - "*/jndi"
+              uri: https://github.com/jahv/SpringCloudConfigTest-ConfigFiles-jndi
+              search-paths:
+                - app*
+
+          #username: Not needed since is a public repo
+          #password:
